# index_poc

./: README.md  main.py
data/: ETF.xlsx  nasdaq.xlsx
index_search/: README.md  pyproject.toml  requirements.txt
index_search/scripts/: __init__.py  demo_query.py  ingest_sample.py
index_search/src/: config.py  models  services
index_search/src/db/: __init__.py
index_search/src/embeddings/__init__.py/embedder/: sqlite_manager.py
index_search/src/embeddings/__init__.py/embedder/elastic_client.py/: classifier.py
index_search/src/embeddings/__init__.py/embedder/tool/index_models.py            # Pydantic/dataclass models for index entries/: search.py
index_search/src/hierarchical/: __init__.py
index_search/src/utils/: helpers.py
index_search/src/vector_search/: __init__.py
index_search/tests/: test_classifier.py  test_elastic.py  test_embedder.py  test_index_selection_ko.py  test_sqlite.py
