[tool.poetry]
name = "index-search-python"
version = "0.1.0"
description = "An index searching application using vector similarity and hierarchical classification."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "^7.10.0"
langchain = "^0.0.1"
sqlite3 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"